--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "license": "Proprietary",
     "private": true,
     "scripts": {
-        "start-client": "webpack-dev-server --config webpack.dev.js --inline --progress",
+        "start-client": "webpack-dev-server --config webpack.dev.js --inline --progress --open",
         "start-server": "nodemon --legacy-watch --ext ts --watch src/Game --exec \"ts-node --project tsconfig.server.json src/Game/server.ts\"",
         "start": "concurrently --kill-others \"npm run start-client\" \"npm run start-server\"",
         "build": "webpack --config webpack.prod.js --progress"
@@ -10,11 +10,11 @@
     "dependencies": {
         "@colyseus/monitor": "^0.12.2",
         "autoprefixer": "^10.2.4",
-        "babylonjs": "^4.2.0",
-        "babylonjs-gui": "^4.2.0",
-        "babylonjs-inspector": "^4.2.0",
-        "babylonjs-loaders": "^4.2.0",
-        "babylonjs-materials": "^4.2.0",
+        "babylonjs": "^5.0.0-alpha.16",
+        "babylonjs-gui": "^5.0.0-alpha.16",
+        "babylonjs-inspector": "^5.0.0-alpha.16",
+        "babylonjs-loaders": "^5.0.0-alpha.16",
+        "babylonjs-materials": "^5.0.0-alpha.16",
         "colyseus": "^0.13.0",
         "colyseus.js": "^0.13.0",
         "cors": "^2.8.5",
@@ -23,9 +23,7 @@
         "store": "^2.0.12",
         "ts-keycode-enum": "^1.0.6",
         "uuid": "^8.0.0",
-        "xhr2": "^0.2.0"
-    },
-    "devDependencies": {
+        "xhr2": "^0.2.0",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
         "@types/uuid": "^3.4.9",
