--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     },
     "dependencies": {
         "@colyseus/monitor": "^0.12.2",
+        "@types/cors": "^2.8.6",
+        "@types/express": "^4.17.6",
+        "@types/uuid": "^3.4.9",
         "autoprefixer": "^10.2.4",
         "babylonjs": "^5.0.0-alpha.16",
         "babylonjs-gui": "^5.0.0-alpha.16",
@@ -17,30 +20,28 @@
         "babylonjs-materials": "^5.0.0-alpha.16",
         "colyseus": "^0.13.0",
         "colyseus.js": "^0.13.0",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "express-basic-auth": "^1.2.0",
-        "store": "^2.0.12",
-        "ts-keycode-enum": "^1.0.6",
-        "uuid": "^8.0.0",
-        "xhr2": "^0.2.0",
-        "@types/cors": "^2.8.6",
-        "@types/express": "^4.17.6",
-        "@types/uuid": "^3.4.9",
         "concurrently": "^5.2.0",
         "copy-webpack-plugin": "^5.1.1",
+        "cors": "^2.8.5",
         "css-loader": "^3.5.3",
+        "express": "^4.17.1",
+        "express-basic-auth": "^1.2.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.9.0",
         "nodemon": "^2.0.4",
+        "store": "^2.0.12",
         "terser-webpack-plugin": "^2.3.6",
+        "ts-keycode-enum": "^1.0.6",
         "ts-loader": "^6.2.2",
         "ts-node": "^8.10.1",
         "typescript": "^3.9.2",
+        "uuid": "^8.0.0",
         "webpack": "^4.43.0",
+        "webpack-bundle-analyzer": "^4.4.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.0",
-        "webpack-merge": "^4.2.2"
+        "webpack-merge": "^4.2.2",
+        "xhr2": "^0.2.0"
     },
     "nodemonConfig": {
         "env": {
