--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.9.0",
         "nodemon": "^2.0.4",
+        "raw-loader": "^4.0.2",
         "store": "^2.0.12",
         "terser-webpack-plugin": "^2.3.6",
         "ts-keycode-enum": "^1.0.6",
@@ -36,7 +37,7 @@
         "ts-node": "^8.10.1",
         "typescript": "^3.9.2",
         "uuid": "^8.0.0",
-        "webpack": "^4.43.0",
+        "webpack": "4.46.0",
         "webpack-bundle-analyzer": "^4.4.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.0",
