--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,10 @@
-[*.json]
-indent_style = space
-indent_size = 4
+# editorconfig.org
 
-[*.{js,ts}]
-indent_style = space
+root = true
+
+[*]
+charset = utf-8
 indent_size = 2
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
