--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-    "license": "Proprietary",
-    "private": true,
     "scripts": {
-        "start-client": "webpack-dev-server --config webpack.dev.js --inline --progress --open",
+        "start-client": "webpack serve --open --config webpack.dev.js",
         "start-server": "nodemon --legacy-watch --ext ts --watch src/Game --exec \"ts-node --project tsconfig.server.json src/Game/server.ts\"",
         "start": "concurrently --kill-others \"npm run start-client\" \"npm run start-server\"",
         "build": "webpack --config webpack.prod.js --progress"
     },
-    "dependencies": {
+    "devDependencies": {
         "@colyseus/monitor": "^0.12.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
@@ -18,32 +16,35 @@
         "babylonjs-inspector": "^5.0.0-alpha.16",
         "babylonjs-loaders": "^5.0.0-alpha.16",
         "babylonjs-materials": "^5.0.0-alpha.16",
+        "clean-webpack-plugin": "^3.0.0",
         "colyseus": "^0.13.0",
         "colyseus.js": "^0.13.0",
         "concurrently": "^5.2.0",
-        "copy-webpack-plugin": "^5.1.1",
+        "copy-webpack-plugin": "^8.1.1",
         "cors": "^2.8.5",
         "css-loader": "^3.5.3",
         "express": "^4.17.1",
         "express-basic-auth": "^1.2.0",
-        "html-webpack-plugin": "^3.2.0",
-        "mini-css-extract-plugin": "1.4.1",
+        "html-webpack-plugin": "^5.0.0-beta.6",
+        "mini-css-extract-plugin": "^1.3.5",
         "nodemon": "^2.0.4",
         "raw-loader": "^4.0.2",
-        "sass": "^1.32.8",
-        "sass-loader": "10.1.1",
+        "sass": "^1.32.5",
+        "sass-loader": "^10.1.1",
+        "style-loader": "^2.0.0",
         "store": "^2.0.12",
         "terser-webpack-plugin": "^2.3.6",
         "ts-keycode-enum": "^1.0.6",
-        "ts-loader": "^6.2.2",
+        "ts-loader": "^8.0.14",
         "ts-node": "^8.10.1",
-        "typescript": "^3.9.2",
+        "typescript": "^4.1.3",
         "uuid": "^8.0.0",
-        "webpack": "4.46.0",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.19.0",
         "webpack-bundle-analyzer": "^4.4.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.0",
-        "webpack-merge": "^4.2.2",
+        "webpack-cli": "^4.4.0",
+        "webpack-dev-server": "^3.11.2",
+        "webpack-merge": "^5.7.3",
         "xhr2": "^0.2.1"
     },
     "nodemonConfig": {
