--- a/package.json
+++ b/package.json
@@ -20,26 +20,25 @@
         "colyseus": "^0.13.0",
         "colyseus.js": "^0.13.0",
         "concurrently": "^5.2.0",
-        "copy-webpack-plugin": "^8.1.1",
         "cors": "^2.8.5",
         "css-loader": "^3.5.3",
         "express": "^4.17.1",
         "express-basic-auth": "^1.2.0",
-        "html-webpack-plugin": "^5.0.0-beta.6",
+        "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.3.5",
         "nodemon": "^2.0.4",
         "raw-loader": "^4.0.2",
         "sass": "^1.32.5",
         "sass-loader": "^10.1.1",
-        "style-loader": "^2.0.0",
         "store": "^2.0.12",
+        "style-loader": "^2.0.0",
         "terser-webpack-plugin": "^2.3.6",
         "ts-keycode-enum": "^1.0.6",
         "ts-loader": "^8.0.14",
         "ts-node": "^8.10.1",
         "typescript": "^4.1.3",
-        "uuid": "^8.0.0",
         "url-loader": "^4.1.1",
+        "uuid": "^8.0.0",
         "webpack": "^5.19.0",
         "webpack-bundle-analyzer": "^4.4.0",
         "webpack-cli": "^4.4.0",
