--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@colyseus/monitor": "^0.14.22",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
+        "@types/store": "^2.0.2",
         "@types/uuid": "^3.4.9",
         "autoprefixer": "^10.2.4",
         "babylonjs": "^5.0.0-alpha.65",
