--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
-    "compilerOptions": {
-      "target": "ES5",
-      "sourceMap": true,
-      "esModuleInterop": true,
-      "experimentalDecorators": true
-    },
-    "types": [
-      "babylonjs",
-      "babylonjs-loaders",
-      "babylonjs-gui"
-    ]
-  }
-  
+  "compilerOptions": {
+    "target": "ES6",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true
+  },
+  "types": [
+    "babylonjs",
+    "babylonjs-loaders",
+    "babylonjs-gui"
+  ]
+}
